<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="156dp"
        android:layout_height="66dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/starter_text"
        android:textAllCaps="true"
        android:textColor="@color/purple_200"
        android:textColorHighlight="@color/ilvesVihreä"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/buttonTest"
        android:layout_width="106dp"
        android:layout_height="59dp"
        android:layout_marginTop="156dp"
        android:backgroundTint="#FFC107"
        android:text="@string/button"
        android:textColor="#1C592D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="416dp"
        android:layout_height="571dp"
        android:layout_marginBottom="375dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472"
        app:srcCompat="@drawable/joonaikonen" />

    <Button
        android:id="@+id/buttonPeli"
        android:backgroundTint="#FFC107"
        android:textColor="#1C592D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPeli"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="584dp"
        android:layout_height="377dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.649"
        app:srcCompat="@drawable/nokiaareena" />



</androidx.constraintlayout.widget.ConstraintLayout>